--- a/Project/app/src/main/res/layout/event_landing_page_organiser.xml
+++ b/Project/app/src/main/res/layout/event_landing_page_organiser.xml
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/placeholder_event"
-        app:tint="#808080"
+        app:tint="#404040"
         app:tintMode="multiply" />
 
     <TextView
@@ -43,7 +43,6 @@
         android:id="@+id/event_name_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:text="@string/event_name_text"
         android:textAlignment="center"
@@ -52,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_text" />
+        app:layout_constraintTop_toBottomOf="@+id/event_back_button" />
 
     <ImageButton
         android:layout_marginStart="-16dp"
@@ -184,6 +183,7 @@
         android:text="@string/geolocation_verification_text"
         android:textColor="@color/lucky_uiAccent"
         android:textSize="16sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/qrcode_button" />
@@ -192,7 +192,7 @@
         android:id="@+id/event_countdown_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/extra_rounded_edittext"
         android:backgroundTint="@color/lucky_uiAccent"
         android:fontFamily="@font/airbnbcereal_w_bk"
