--- a/Project/app/src/main/res/layout/event_landing_page_user.xml
+++ b/Project/app/src/main/res/layout/event_landing_page_user.xml
@@ -6,25 +6,29 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="32dp"
+    android:clipToPadding="false"
     android:background="@color/lucky_background">
 
-<!-- I don't know how to place the picture properly-->
-<!--    <ImageView-->
-<!--        android:id="@+id/event_picture"-->
-<!--        android:layout_width="410dp"-->
-<!--        android:layout_height="140dp"-->
-<!--        android:layout_marginStart="-32dp"-->
-<!--        android:layout_marginTop="-32dp"-->
-<!--        android:layout_marginEnd="-32dp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:srcCompat="@mipmap/event_foreground" />-->
+    <ImageView
+        android:id="@+id/event_picture"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-32dp"
+        android:layout_marginTop="-32dp"
+        android:layout_marginEnd="-32dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/placeholder_event"
+        app:tint="#404040"
+        app:tintMode="multiply" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:text="Details"
         android:textAlignment="textStart"
@@ -33,7 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="312dp" />
+        app:layout_constraintTop_toBottomOf="@+id/event_price_view" />
 
     <TextView
         android:id="@+id/event_name_view"
@@ -44,15 +48,14 @@
         android:textAlignment="center"
         android:textColor="@color/lucky_white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_text"
-        app:layout_constraintVertical_bias="0.308" />
+        app:layout_constraintTop_toBottomOf="@+id/event_back_button" />
 
     <ImageButton
         android:id="@+id/event_back_button"
+        android:layout_marginStart="-16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#00FFFFFF"
@@ -65,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#00FFFFFF"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/more" />
@@ -169,7 +173,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/event_deadline_view" />
 
-<!--    Hide text if event does not use geolocation-->
+<!--    Hide text if event does not use geolocation using android:visibility="gone"-->
 
     <TextView
         android:id="@+id/geolocation_warning_view"
@@ -179,6 +183,7 @@
         android:text="@string/geolocation_verification_text"
         android:textColor="@color/lucky_uiAccent"
         android:textSize="16sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/event_join_button" />
@@ -241,7 +246,7 @@
         android:id="@+id/event_countdown_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/extra_rounded_edittext"
         android:backgroundTint="@color/lucky_uiAccent"
         android:fontFamily="@font/airbnbcereal_w_bk"
