--- a/Project/app/src/main/res/layout/register.xml
+++ b/Project/app/src/main/res/layout/register.xml
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/signup_secondname" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signup_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/lucky_uiAccent"
