Copied all UI elements from project to projectv2. Created a method to send notifications to users and to display them

--- a/Project_v2/app/src/main/res/values/colors.xml
+++ b/Project_v2/app/src/main/res/values/colors.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <color name="lucky_background">#2D2D3A</color>
+    <color name="lucky_ui">#393948</color>
+    <color name="lucky_uiEmphasis">#3C3F5E</color>
+    <color name="lucky_uiAccent">#5669FF</color>
+    <color name="lucky_red_alert">#F2583E</color>
+    <color name="lucky_green_alert">#29D657</color>
+    <color name="lucky_grey">#888891</color>
+    <color name="lucky_white">#FFFFFFFF</color>
+
+
 </resources>
