--- a/Project_v2/app/src/main/res/layout/entrant_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/entrant_list_object.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_overlay"
-    android:backgroundTint="@color/lucky_uiEmphasis">
+    android:backgroundTint="@color/lucky_uiEmphasis"
+    android:layout_margin="8dp">
 
 
     <TextView
