--- a/Project_v2/app/src/main/res/layout/homescreen_available_events_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_available_events_list_object.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/GenericText"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="8dp">
 
     <ImageView
         android:id="@+id/backgroundImage"
@@ -20,9 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="24dp">
-
-        <!--        android:background="@drawable/rounded_corners"-->
-        <!--        android:clipToOutline="true"-->
 
         <TextView
             android:id="@+id/textView12"
