--- a/Project_v2/app/src/main/res/layout/notification_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/notification_list_object.xml
@@ -5,7 +5,7 @@
     android:id="@+id/notification_object"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginVertical="8dp"
     android:background="@drawable/rounded_overlay"
     android:backgroundTint="@color/lucky_uiEmphasis">
 
