--- a/Project_v2/app/src/main/res/layout/homescreen_your_events_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_your_events_list_object.xml
@@ -50,15 +50,18 @@
 
         <TextView
             android:id="@+id/textView14"
-            style="@style/GenericText"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:ellipsize="end"
-            android:maxLines="4"
-            android:text="@string/event_description_text"
-            android:textSize="14sp"
+            android:background="@drawable/rounded_active_button_background"
+            android:fontFamily="@font/airbnbcereal_w_bd"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="24dp"
+            android:text="500 Waiting"
+            android:textColor="@color/lucky_white"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/textView15"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
