--- a/Project_v2/app/src/main/res/layout/facility_create_edit_page.xml
+++ b/Project_v2/app/src/main/res/layout/facility_create_edit_page.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lucky_background"
     android:padding="32dp">
 
     <TextView
-        android:id="@+id/create_event_name_view"
+        android:id="@+id/facility_edit_name_view"
         style="@style/RoundedEditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
-        android:text="@string/create_event_name_text"
+        android:hint="@string/create_event_name_text"
+        android:textColor="@color/lucky_white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -26,14 +28,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Event Details"
+        android:text="Description"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_event_name_view" />
+        app:layout_constraintTop_toBottomOf="@+id/facility_edit_name_view" />
 
     <TextView
         android:id="@+id/textView3"
@@ -41,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Event Name"
+        android:text="Name"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
         android:textSize="20sp"
@@ -52,8 +54,7 @@
 
     <ImageButton
         android:layout_marginStart="-16dp"
-
-        android:id="@+id/event_back_button"
+        android:id="@+id/facility_edit_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#00FFFFFF"
@@ -62,80 +63,33 @@
         app:srcCompat="@drawable/back" />
 
     <TextView
-        android:id="@+id/event_text"
+        android:id="@+id/facility_banner_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="New Event"
+        android:text="Edit Facility"
         android:textColor="@color/lucky_white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/event_back_button"
-        app:layout_constraintStart_toEndOf="@+id/event_back_button"
-        app:layout_constraintTop_toTopOf="@+id/event_back_button" />
+        app:layout_constraintBottom_toBottomOf="@+id/facility_edit_back_button"
+        app:layout_constraintStart_toEndOf="@+id/facility_edit_back_button"
+        app:layout_constraintTop_toTopOf="@+id/facility_edit_back_button" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Event Rules"
-        android:textAlignment="textStart"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_event_details_view" />
-
-    <TextView
-        android:id="@+id/create_event_details_view"
+        android:id="@+id/facility_edit_description_view"
         style="@style/RoundedEditTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
-        android:text="@string/create_event_details_text"
+        android:hint="@string/create_event_details_text"
+        android:textColor="@color/lucky_white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <TextView
-        android:id="@+id/create_event_rules_view"
-        style="@style/RoundedEditTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:text="@string/create_event_rules_text"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-
-    <!--    Hide text if event does not use geolocation-->
-
-    <Button
-        android:id="@+id/create_event_next_button"
-        style="@style/ActiveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/right_arrow"
-        android:drawablePadding="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Next"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textSize="20sp"
-        app:cornerRadius="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_event_rules_view" />
 
     <ImageView
         android:id="@+id/create_event_pic_view"
@@ -148,7 +102,7 @@
         android:src="@drawable/placeholder_event"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_text"
+        app:layout_constraintTop_toBottomOf="@+id/facility_banner_text"
         app:tint="#404040"
         app:tintMode="multiply" />
 
@@ -162,5 +116,17 @@
         app:layout_constraintStart_toStartOf="@+id/create_event_pic_view"
         app:layout_constraintTop_toTopOf="@+id/create_event_pic_view"
         app:srcCompat="@drawable/eventcreationpic_icon" />
+
+    <Button
+        android:id="@+id/facility_edit_button"
+        style="@style/ActiveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/airbnbcereal_w_md"
+        android:text="Save Facility"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/facility_edit_description_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
