--- a/Project_v2/app/src/main/res/values/styles.xml
+++ b/Project_v2/app/src/main/res/values/styles.xml
@@ -14,6 +14,17 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="RoundedProfileName">
+        <item name="android:background">@drawable/rounded_inactive_button_background</item>
+        <item name="android:paddingHorizontal">24dp</item>
+        <item name="android:paddingVertical">4dp</item>
+        <item name="android:fontFamily">@font/airbnbcereal_w_bd</item>
+        <item name="android:textColor">@color/lucky_grey</item>
+        <item name="android:textColorHint">@color/lucky_grey</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+
     <style name="InactiveButton">
         <item name="android:backgroundTint">@color/lucky_uiEmphasis</item>
         <item name="android:fontFamily">@font/airbnbcereal_w_bk</item>
