- Connected nav bar, nav bar elements to Home Screen. - Implemented pagination and dummy events in Home Screen

--- a/Project_v2/app/src/main/res/layout/homescreen_available_events_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_available_events_list_object.xml
@@ -22,7 +22,7 @@
         android:padding="24dp">
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/available_event_event_name_text"
             style="@style/GenericText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
