--- a/Project_v2/app/src/main/res/layout/homescreen_your_events_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_your_events_list_object.xml
@@ -22,16 +22,14 @@
         android:padding="24dp">
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/your_event_event_name_text"
             style="@style/GenericText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:fontFamily="@font/airbnbcereal_w_bd"
             android:text="@string/event_name_text"
             android:textAlignment="viewStart"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView14"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,11 +38,9 @@
             style="@style/GenericText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:fontFamily="@font/airbnbcereal_w_bd"
             android:text="@string/event_deadline_text"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView14"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,19 +48,17 @@
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_active_button_background"
             android:fontFamily="@font/airbnbcereal_w_bd"
-            android:paddingVertical="8dp"
             android:paddingHorizontal="24dp"
+            android:paddingVertical="8dp"
             android:text="500 Waiting"
             android:textColor="@color/lucky_white"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/textView15"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
         <TextView
             android:id="@+id/textView15"
