--- a/Project_v2/app/src/main/res/layout/homescreen_nav_bar_header.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_nav_bar_header.xml
@@ -38,8 +38,8 @@
             android:textAlignment="center"
             android:textColor="@color/lucky_white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/profile_pic_view"
-            app:layout_constraintStart_toStartOf="@+id/profile_pic_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile_pic_view" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
