--- a/Project_v2/app/src/main/res/layout/profile.xml
+++ b/Project_v2/app/src/main/res/layout/profile.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="144dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/profile_pic_view"
         app:layout_constraintEnd_toEndOf="@+id/profile_pic_view"
         app:layout_constraintStart_toStartOf="@+id/profile_pic_view"
@@ -25,14 +25,14 @@
         android:id="@+id/profile_pic_view"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_marginTop="32dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/placeholder_profile_picture"
         app:civ_border_color="@color/lucky_uiEmphasis"
         app:civ_border_width="6dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toTopOf="@+id/profile_name_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_text" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_back_button" />
 
     <ImageButton
         android:id="@+id/profile_pic_edit_button"
@@ -83,6 +83,7 @@
         android:id="@+id/profile_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:text="Name"
         android:textColor="@color/lucky_white"
@@ -90,7 +91,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="352dp" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_pic_view" />
 
     <TextView
         android:id="@+id/profile_email_text"
@@ -175,8 +176,7 @@
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_phone_box" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
