--- a/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
+++ b/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
@@ -9,7 +9,7 @@
 
     <item
         android:id="@+id/nav_facilities"
-        android:title="Facilities" />
+        android:title="Your Facilities" />
 
     <item
         android:id="@+id/nav_qrScanner"
@@ -22,4 +22,9 @@
     <item
         android:id="@+id/nav_browseImages"
         android:title="Browse Images" />
+
+    <item
+        android:id="@+id/nav_browseFacilities"
+        android:title="Browse Facilities" />
+
 </menu>
