--- a/Project_v2/app/src/main/res/layout/notification.xml
+++ b/Project_v2/app/src/main/res/layout/notification.xml
@@ -1,46 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lucky_background"
-    android:padding="32dp"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:padding="24dp">
 
-    <ImageButton
-        android:id="@+id/notification_back_button"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/notification_top_bar"
+        layout="@layout/top_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-16dp"
-        android:backgroundTint="#00FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
-
-    <TextView
-        android:id="@+id/notification_banner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Notifications"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/notification_back_button"
-        app:layout_constraintStart_toEndOf="@+id/notification_back_button"
-        app:layout_constraintTop_toTopOf="@+id/notification_back_button" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notification_recylcerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="-32dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notification_back_button" />
+        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
