--- a/Project_v2/app/src/main/res/layout/profile.xml
+++ b/Project_v2/app/src/main/res/layout/profile.xml
@@ -5,11 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="32dp"
-    android:background="@color/lucky_background">
+    android:padding="24dp"
+    android:background="@color/lucky_background"
+    tools:ignore="ContentDescription, HardCodedText, Autofill, Labelfor" >
 
-<!--Hide indicator if not admin using android:visibility="visible"-->
+    <include
+        android:id="@+id/notification_top_bar"
+        layout="@layout/top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+
+    <!--Hide indicator if not admin using android:visibility="visible"-->
     <ImageView
         android:id="@+id/profile_admin_indicator"
         android:layout_width="wrap_content"
@@ -32,7 +42,7 @@
         app:civ_border_width="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_back_button" />
+        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />
 
     <ImageButton
         android:id="@+id/profile_pic_edit_button"
@@ -46,38 +56,6 @@
         app:layout_constraintTop_toTopOf="@+id/profile_pic_view"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/profilepicedit_icon" />
-
-    <ImageButton
-        android:layout_marginStart="-16dp"
-        android:id="@+id/profile_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
-
-    <ImageButton
-        android:id="@+id/profile_more_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/more" />
-
-    <TextView
-        android:id="@+id/profile_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Profile"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_back_button"
-        app:layout_constraintStart_toEndOf="@+id/profile_back_button"
-        app:layout_constraintTop_toTopOf="@+id/profile_back_button" />
 
     <TextView
         android:id="@+id/profile_name_text"
