register.xml looks better now, added circleImageView, moved RegisterFragment to project directory so it can be referenced in the register.xml for fragment creation

--- a/Project_v2/app/src/main/res/layout/register.xml
+++ b/Project_v2/app/src/main/res/layout/register.xml
@@ -3,37 +3,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".RegisterFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="32dp"
     android:background="@color/lucky_background">
 
-<!--    it needs to be a circle, still working on that. can use a button if needed-->
-    <androidx.cardview.widget.CardView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constrainedHeight="true"
+        android:src="@drawable/app_logo"
         app:layout_constraintBottom_toTopOf="@+id/signup_text"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:maxHeight="100dp"
-        android:maxWidth="100dp">
+        android:maxHeight="96dp"
+        android:maxWidth="96dp"
+        app:layout_constrainedHeight="true"
+        android:layout_marginTop="30dp"
+        />
 
-
-        <ImageView
-            android:layout_width="147dp"
-            android:layout_height="wrap_content"
-
-
-            android:src="@drawable/app_logo" />
-    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/signup_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="152dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:text="Sign Up"
         android:textAlignment="center"
@@ -42,7 +36,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingTop="10dp"/>
 
     <EditText
         android:id="@+id/signup_email"
@@ -52,7 +47,7 @@
         android:layout_marginTop="96dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="Email"
+        android:hint="Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_text" />
@@ -65,7 +60,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="First Name"
+        android:hint="First Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_email" />
@@ -78,7 +73,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Second Name"
+        android:hint="Second Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_firstname" />
@@ -91,7 +86,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="phone"
-        android:text="Phone Number (optional)"
+        android:hint="Phone Number (optional)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_secondname" />
@@ -104,7 +99,7 @@
         android:drawableEnd="@drawable/right_arrow"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:padding="16dp"
-        android:text="SIGN UP"
+        android:hint="SIGN UP"
         android:textColor="@color/lucky_white"
         android:textSize="20sp"
         app:cornerRadius="30dp"
